Implement Google OAuth2 login with automatic token refresh.
Replace the desktop OAuth flow that required a hardcoded access token with a web authorization-code login. Students sign in with Google, refresh tokens are requested for offline access, and Calendar API calls use the signed-in user's current token.

Co-authored-by: Roy Nyarko Yeboah <royyeboah@users.noreply.github.com>